Add chromedriver to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ dist/westermo-fw-automation-v2-WeOS-4.32.1.exe
 dist/westermo-fw-automation-WeOS-4.32.1.exe
 build
 dist
+chromedriver.exe
+westermo-fw-automation-v2-WeOS-4.32.2.zip
+chromedriver.exe
+__pycache__/apufunktiot.cpython-310.pyc
+
